cp/cf/1015d.cpp -run

/Users/distiled/codeStuff/cp/cf/1015d.cpp: In function 'int main()':
/Users/distiled/codeStuff/cp/cf/1015d.cpp:42:9: error: 'in' was not declared in this scope; did you mean 'n'?
   42 |     for(in ti = 0; i < k - 1; i++) {
      |         ^~
      |         n
/Users/distiled/codeStuff/cp/cf/1015d.cpp:42:28: error: the value of 'k' is not usable in a constant expression
   42 |     for(in ti = 0; i < k - 1; i++) {
      |                            ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:17:13: note: 'long long int k' is not const
   17 |   int n, s, k;
      |             ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:42:28: error: the value of 'k' is not usable in a constant expression
   42 |     for(in ti = 0; i < k - 1; i++) {
      |                            ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:17:13: note: 'long long int k' is not const
   17 |   int n, s, k;
      |             ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:42:28: error: the value of 'k' is not usable in a constant expression
   42 |     for(in ti = 0; i < k - 1; i++) {
      |                            ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:17:13: note: 'long long int k' is not const
   17 |   int n, s, k;
      |             ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:42:28: error: the value of 'k' is not usable in a constant expression
   42 |     for(in ti = 0; i < k - 1; i++) {
      |                            ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:17:13: note: 'long long int k' is not const
   17 |   int n, s, k;
      |             ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:42:28: error: the value of 'k' is not usable in a constant expression
   42 |     for(in ti = 0; i < k - 1; i++) {
      |                            ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:17:13: note: 'long long int k' is not const
   17 |   int n, s, k;
      |             ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:42:28: error: the value of 'k' is not usable in a constant expression
   42 |     for(in ti = 0; i < k - 1; i++) {
      |                            ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:17:13: note: 'long long int k' is not const
   17 |   int n, s, k;
      |             ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:42:28: error: the value of 'k' is not usable in a constant expression
   42 |     for(in ti = 0; i < k - 1; i++) {
      |                            ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:17:13: note: 'long long int k' is not const
   17 |   int n, s, k;
      |             ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:42:28: error: the value of 'k' is not usable in a constant expression
   42 |     for(in ti = 0; i < k - 1; i++) {
      |                            ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:17:13: note: 'long long int k' is not const
   17 |   int n, s, k;
      |             ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:42:28: error: the value of 'k' is not usable in a constant expression
   42 |     for(in ti = 0; i < k - 1; i++) {
      |                            ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:17:13: note: 'long long int k' is not const
   17 |   int n, s, k;
      |             ^
/Users/distiled/codeStuff/cp/cf/1015d.cpp:42:20: error: 'i' was not declared in this scope
   42 |     for(in ti = 0; i < k - 1; i++) {
      |                    ^

